Bug 484599 - Name of UI element too long (Hide/Show Sidebar)
Summary: Name of UI element too long (Hide/Show Sidebar)
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-03-27 13:43 UTC by Matthias
Modified: 2024-03-28 17:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.04.0
Sentry Crash Report:


Attachments
UI Element (26.95 KB, image/png)
2024-03-27 13:43 UTC, Matthias
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matthias 2024-03-27 13:43:24 UTC
Created attachment 167845 [details]
UI Element

SUMMARY

The current name for the toolbar element to show and hide the sidebar is unnecessary long: 

Hide/Show the component sidebar

This makes it uneasy, to use this as a dedicated button in the toolbar. 
(See screenshot)

First, there is no other sidebar, so "component" is superfluous to begin with. 

Second, other buttons have the option to change, depending on the state. 

Like in Dolphin, where the "Split" element changes into "Close" and vice versa. 
We could implement, to do the same here. 

Otherwise, I suggest to rename the element simply into "Sidebar" and call it a day. 
Also consider, that this causes the translators to do work, so let us decide on this with foresight.  :)

Thanks a lot


STEPS TO REPRODUCE
1.  Open Kontact, switch to the KMail panel (I assume standalone Kmail is the same)
2.  Add the 'Hide/Show the component sidebar' element to the toolbar. 
3.  Acknowledge, that it takes much space. 


Operating System: NixOS 24.05
KDE Plasma Version: 6.0.2
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.6.22 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 5800U with Radeon Graphics
Memory: 13,5 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Comment 1 Laurent Montel 2024-03-27 21:41:14 UTC
Git commit c544a50d4aed519ba170f4686612403254667dc2 by Laurent Montel.
Committed on 27/03/2024 at 21:41.
Pushed by mlaurent into branch 'master'.

Fix bug 484599: Name of UI element too long (Hide/Show Sidebar)

Rename it.
FIXED-IN: 24.04.0

M  +1    -1    src/mainwindow.cpp

https://invent.kde.org/pim/kontact/-/commit/c544a50d4aed519ba170f4686612403254667dc2
Comment 2 Matthias 2024-03-28 06:52:50 UTC
Do I understand this right, that the text now says 'Show Sidebar' both when its already open, and when its closed?
Comment 3 Laurent Montel 2024-03-28 07:02:20 UTC
Yep it's a checkable button.
Same for "show toolbar"/"Full screen" etc.
Comment 4 Matthias 2024-03-28 11:24:25 UTC
So it will show 'Hide Sidebar' when open?
Comment 5 Laurent Montel 2024-03-28 12:03:41 UTC
nope as for "show toolbar"/"Full screen" etc. we keep it and we have info from checked state.
Comment 6 Matthias 2024-03-28 17:30:13 UTC
I am just confused