Fix bug 484599: Name of UI element too long (Hide/Show Sidebar)

Rename it.
BUG: 484599
FIXED-IN: 24.04.0